--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.14.14",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
-    "solid": "link:@heroicons/react/20/solid"
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@types/node": "^20",
