--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/node": "^20",
