--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.14",
     "next": "13.5.4",
     "react": "^18",
@@ -25,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.52.0",
     "eslint-config-next": "13.5.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
