--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,16 +43,20 @@
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/require-await": "off",
-    "@typescript-eslint/return-await": [
-      "error",
-      "in-try-catch"
-    ],
+    "@typescript-eslint/return-await": ["error", "in-try-catch"],
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
         "argsIgnorePattern": "^_",
         "varsIgnorePattern": "^_"
+      }
+    ],
+    "no-restricted-imports": [
+      "error",
+      {
+        "name": "next/router",
+        "message": "Please use router from 'next/navigation' instead."
       }
     ],
     "@typescript-eslint/restrict-template-expressions": [
