--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     ],
     "import/namespace": ["off"],
     "no-empty-pattern": "off",
+    "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/require-await": "off",
