--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-hook-form-persist": "^3.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
