--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.0.18",
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.14",
+    "@types/js-cookie": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
