--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.14",
+    "@mui/x-data-grid": "^6.18.2",
     "@types/js-cookie": "^3.0.6",
     "js-cookie": "^3.0.5",
     "next": "13.5.4",
