--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/x-data-grid": "^6.18.2",
     "@types/js-cookie": "^3.0.6",
     "js-cookie": "^3.0.5",
-    "next": "13.5.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
