--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.18.2",
     "@types/js-cookie": "^3.0.6",
+    "chart.js": "^4.4.1",
     "js-cookie": "^3.0.5",
     "next": "^14.0.4",
     "react": "^18",
