--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.18.2",
     "@types/js-cookie": "^3.0.6",
-    "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
-    "next": "^14.0.4",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
