First stable working version (#10)
* Add analysis schema form and schema

* Add initial adding analysis logic

* Finish individual question analysis schema creation

* Results view in progress

* Remove unnecessary libs

* remove lib

* Start moving to cookies function

* Fix issues with caching

* Add charts

* Add some responsivness

* Finish responsiveness

* Add tooltips

* Fix cache finally

* Update package.json

* Update new-survey-header.tsx

* Update new-survey-header.tsx

* Update text-form-field.tsx

* Add new survey error validation

* Finished new-survey-header

* Remove mui/lab

* Add bar types

* Opt out of analysis schema modes

---------

Co-authored-by: DawidZ <dawid.ziobrowski@brandmed.com>
Co-authored-by: JanCzop <101407608+JanCzop@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
-    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.18.2",
     "@types/js-cookie": "^3.0.6",
+    "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.25.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
